--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="BackgroundColor">#D9D9D9</color>
+    <color name="LightGreen">#00E593</color>
+    <color name="DarkGreen">#17515D</color>
 </resources>
