--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="BackgroundColor">#D9D9D9</color>
     <color name="LightGreen">#00E593</color>
     <color name="DarkGreen">#17515D</color>
+    <color name="DarkGreenTranslucido">#8017515D</color>
 </resources>
