--- a/app/src/main/res/layout/activity_pesquisar_coleta.xml
+++ b/app/src/main/res/layout/activity_pesquisar_coleta.xml
@@ -106,6 +106,7 @@
         >
 
         <Button
+            android:id="@+id/UsarLocaluizacaoAtual"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/localizacao_atual"
@@ -127,11 +128,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
             <!-- Card view -->
-
         </LinearLayout>
-
     </ScrollView>
 
     <FrameLayout
@@ -142,12 +140,12 @@
         android:layout_gravity="center"
         >
         <ProgressBar
-            android:id="@+id/progressBar"
+            android:id="@+id/loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:indeterminate="true"
+            android:visibility="gone"
             />
-        <!--android:visibility="gone"-->
     </FrameLayout>
 </RelativeLayout>
