--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="LightGreen">#00E593</color>
     <color name="DarkGreen">#17515D</color>
     <color name="DarkGreenTranslucido">#8017515D</color>
+    <color name="Green">#00781A</color>
+    <color name="DarkGrey">#3E3E3E</color>
 </resources>
