--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:visibility="gone"
+        />
+
     <TextView
         android:id="@+id/AppName"
         android:layout_width="wrap_content"
@@ -98,7 +107,7 @@
                     android:layout_gravity="center"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:src="@drawable/ic_launcher_foreground" />
+                    android:src="@drawable/icon_mark" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -106,7 +115,7 @@
                     android:textColor="@color/black"
                     android:textAlignment="center"
                     android:layout_gravity="center_horizontal"
-                    android:text="@string/embreve"
+                    android:text="@string/Card2"
                     android:textSize="17sp"
                     android:textStyle="bold"
                     />
